--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 av
 einops
 flashy>=0.0.1
@@ -9,11 +8,12 @@ num2words
 numpy
 sentencepiece
 spacy==3.5.2
-torch>=2.0.0
-torchaudio>=2.0.0
+thinc==8.1.0
+torch==2.0.1
+torchaudio==2.0.1
 huggingface_hub
 tqdm
-transformers>=4.31.0  # need Encodec there.
+transformers==4.31.0
 xformers
 demucs
 librosa
